5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1764_1576.log
== TEST (2019-05-21 16:24:43) 
-- CODE:
from numpy import*

vet1 = int(input("Tamanho do vetor 1: "))
vet2 = int(input("Tamanho do vetor 2: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:24:48) 
-- CODE:
from numpy import*

vet1 = int(input("Tamanho do vetor 1: "))
vet2 = int(input("Tamanho do vetor 2: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:24:59) 
-- CODE:
from numpy import*

vet1 = int(input("Tamanho do vetor 1: "))
vet2 = int(input("Tamanho do vetor 2: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:25:24) 
-- CODE:
from numpy import*

vet1 = array(int(input("Tamanho do vetor 1: ")))
vet2 = array(int(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:26:33) 
-- CODE:
from numpy import*

vet1 = array(int(input("Tamanho do vetor 1: ")))
vet2 = array(int(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:27:05) 
-- CODE:
from numpy import*

vet1 = array(int(input("Tamanho do vetor 1: ")))
vet2 = array(int(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:30:46) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Tamanho do vetor 1: ")))
vet2 = array(eval(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:30:55) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Tamanho do vetor 1: ")))
vet2 = array(eval(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:59) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Tamanho do vetor 1: ")))
vet2 = array(eval(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:34:21) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Tamanho do vetor 1: ")))
vet2 = array(eval(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:38:41) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Tamanho do vetor 1: ")))
vet2 = array(eval(input("Tamanho do vetor 2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:59:35) 
-- CODE:
from numpy import*
Eusapia = array(
Barsanulfo = array(

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 6
    vitoriaEU = 0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:00:11) 
-- CODE:
from numpy import*
Eusapia = array()
Barsanulfo = array()

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:00:14) 
-- CODE:
from numpy import*
Eusapia = array()
Barsanulfo = array()

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:00:14) 
-- CODE:
from numpy import*
Eusapia = array()
Barsanulfo = array()

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.404386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1576/main.py", line 2, in <module>
    Eusapia = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:00:17) 
-- CODE:
from numpy import*
Eusapia = array()
Barsanulfo = array()

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.472227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1576/main.py", line 2, in <module>
    Eusapia = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:07:04) 
-- CODE:
from numpy import*
Eusapia = array()
Barsanulfo = array()

posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:14:04) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:14:07) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.385182
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:14:42) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:39:35) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi == ])
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 28
    elif(Eusapia[posi == ])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:39:53) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi == ])
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.227791
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 28
    elif(Eusapia[posi == ])
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:39:53) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi == ])
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.214731
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 28
    elif(Eusapia[posi == ])
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:20:58) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi == ])
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 28
    elif(Eusapia[posi == ])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:21:45) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi == ])
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 28
    elif(Eusapia[posi == ])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:24:10) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoria + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:24:25) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:26:19) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:26:25) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.459787
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:26:29) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:26:41) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:51:39) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:51:52) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:52:04) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:18) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:27) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:20) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 23
    vitoriaEU = vitoriaEU + 
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:27) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:03) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:41:07) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.382261
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:26) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:33) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:41:44) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.342197
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:08) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:28) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:36) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:26) 
-- CODE:
from numpy import*
Eusapia = array(eval(input("jogadas de Eusapia: ")))
Barsanulfo = array(eval(input("jogadas de Barsanulfo:  ")))


posi = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(posi < size(Eusapia) and posi < size(Barsanulfo) ):
		if(Eusapia[posi] == Barsanulfo[posi]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 22):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 22  and Barsanulfo[posi] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[posi] == 33 and Barsanulfo[posi] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[posi] == 11 and Barsanulfo[posi] == 22):
			vitoriaBA = vitoriaBA + 1
			6
		elif(Eusapia[posi] == 22 and Barsanulfo[posi] == 11):
			vitoriaEU = vitoriaEU + 1
		
		posi = posi + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
